package com.github.studeasy.dao.categoryDAO;

/**
 * Abstract class for the Category DAO
 * Contains the methods needed by the Category DAO
 */
public abstract class CategoryDAO {
}
