package com.github.studeasy.dao.categoryDAO;

/**
 * The Category DAO using a MySQL database
 * Contains all the methods accessing category related data
 */
public class MySQLCategoryDAO extends CategoryDAO{
}
