package com.github.studeasy.gui.controller.categoryTag;

/**
 * The controller used to add or update a category
 */
public class AddUpdateCategoryController {

}
