package com.github.studeasy.gui.controller.categoryTag;

/**
 * The controller for the management of the categories
 */
public class CategoryManagementController {

}