package com.github.studeasy.gui.routers;

/**
 * Router for the categories related routes
 */
public class CategoryRouter extends AbstractRouter{

}