package com.github.studeasy.logic.facades;

/**
 * The category facade
 * It contains the methods category related
 */
public class FacadeCategory {
}
