@startuml
skinparam classAttributeIconSize 0

package GUI{
    abstract class AbstractRouter{
        + {static} load(String pathFXML) : Parent
        + changeView(String pathFXML, ActionEvent event)
        + adminRestricted(String pathFXML, ActionEvent event)
        + studentRestricted(String pathFXML, ActionEvent event)
        + partnerRestricted(String pathFXML, ActionEvent event)
    }

    class CategoryRouter{
         + {static} MANAGE_CATEGORY_FXML_PATH : String = "views/category/manage_category.fxml"
         + {static} ADD_UPDATE_CATEGORY_FXML_PATH : String = "views/category/add_update_category.fxml"
         + {static} SEE_CATEGORY_FXML_PATH : String = "views/coupon/seeCategory.fxml"
         + {static} getInstance() : CategoryRouter
    }
    class HomeAdminController{
            + manageCategory(ActionEvent event)

    }

    class CategoryManagementController{
            + updateCategory(ActionEvent event)
            + deleteCategory(ActionEvent event)
            + addNewCategory(ActionEvent event)
            + seeAllCategory(ActionEvent event)
            + searchCategory(ActionEvent event)
            + back(ActionEvent event)
            + initialize(URL location, RessourceBundle resources)

    }
    class AddUpdateCategoryController{
            - Categoryname : String
            - Description : String

            + submitAddCategory(ActionEvent event)
            + submitUpdateCategory(ActionEvent event)
            + cancel(ActionEvent event)
            + initialize(URL location, RessourceBundle resources)
        }



    AbstractRouter <|-right- CategoryRouter
    AbstractRouter <-- HomeAdminController
    AbstractRouter <-- CategoryManagementController
    AbstractRouter <-- AddUpdateCategoryController


    CategoryManagementController <.. AbstractRouter : creates
    HomeAdminController <.. AbstractRouter : creates
    AddUpdateCategoryController <.. AbstractRouter : creates
}
package BusinessLogic{
    class FacadeCategory{
        + deleteCategory()
        + seeAllCategory()
        + submitUpdateCategory(String Categoryname,String Description)
        + submitAddCategory(String Categoryname,String Description)
        + {static} getInstance() : FacadeCategory
    }

    abstract class Factory{
        + CreateCategoryDAO() : CategoryDAO
        + {static} getInstance() : Factory
    }
    class MySQLFactory{
        - db : Connection
        + CreateCategoryDAO() : CategoryDAO
        - openConnection()
        - closeConnection()
    }


    Factory <|-- MySQLFactory

    FacadeCategory <-- CategoryManagementController
    FacadeCategory <-- AddUpdateCategoryController
}

package DAO{

    abstract class CategoryDAO{
        + deleteCategory()
        + seeAllCategory() : Category[]
        + submitUpdateCategory(String Categoryname,String Description)
        + submitAddCategory(String Categoryname,String Description)
        + {static} getInstance() : CategoryDAO
    }

    class MySQLCategoryDAO{
        - DB : Connection
        + deleteCategory()
        + seeAllCategory() : Category[]
        + submitUpdateCategory(String Categoryname,String Description)
        + submitAddCategory(String Categoryname,String Description)

    }

    MySQLCategoryDAO --|> CategoryDAO
    MySQLCategoryDAO <.right. MySQLFactory : creates

    CategoryDAO ..> Factory : creates
    CategoryDAO <-right- FacadeCategory
}



@enduml